[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

lib-simulation = { path = "../simulation" }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6.1"
console_error_panic_hook = "0.1.7"

